# RadioIP

./: .gitignore  CMakeLists.txt  Makefile  README.md  sikradio-receiver  sikradio-sender  szym
include/client/: buffer.h  client_options.h  client_parser.h  discover_service.h  msg_parser.h  receiver_service.h  reciever_service.h  retransmission_service.h  station.h  ui_client.h  ui_service.h
include/common/: const.h  err.h  packet_dto.h  safe_structures.h  vec_mutex.h
include/server/: control_daemon.h  retransmission_daemon.h  retransmission_service.h  server_options.h  server_parser.h  streaming_service.h
src/: client_main.cpp  control_daemon.cpp  err.cpp  reciever_service.cpp
src/client/: buffer.cpp  client_main.cpp  client_options.cpp  client_parser.cpp  discover_service.cpp  msg_parser.cpp  receiver_service.cpp  reciever_service.cpp  retransmission_service.cpp  station.cpp  ui_service.cpp
src/common/: err.cpp
src/server/: control_daemon.cpp  retransmission_daemon.cpp  retransmission_service.cpp  server_main.cpp  server_options.cpp  server_parser.cpp  streaming_service.cpp
test/: CMakeLists.txt
test/client/: buffer_test.cpp  main.cpp
test/server/: fifo_test.cpp  main.cpp  server_difftest.cpp  unit_test.cpp
